[package]
name = "gta-sa-route-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { verstion = "0.6" }
bevy_prototype_debug_lines = { git = "https://github.com/Toqozz/bevy_debug_lines", version = "0.4", branch = "bevy-main" }
siege-math = "0.5.1"

[workspace]
resolver = "2"