[package]
name = "gta-sa-route-viewer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { verstion = "0.6" }
bevy_prototype_debug_lines = { git = "https://github.com/Toqozz/bevy_debug_lines", version = "0.4", branch = "bevy-main" }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3